<resources>
    <string name="app_name">Qatar 2022</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="qatar">Qatar</string>
    <string name="favourite_matches">Favourite matches</string>
    <string name="all_matches">All Matches</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="latest_news">Latest News</string>
</resources>