<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/ball"
            android:title="@string/all_matches"/>
        <item
            android:id="@+id/all_matches"
            android:icon="@drawable/like"
            android:title="@string/favourite_matches"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
    </group>
</menu>